--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <meta property="og:title" content="Te Extraño...">
     <meta property="og:description" content="Carta de disculpa.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="http://www.tusitio.com/tu-pagina">
-    <meta property="og:image" content="http://www.tusitio.com/imagen.jpg">
+    <meta property="og:url" content="uknownbyanxer.github.io/-">
+    <meta property="og:image" content="./heart.jpg">
     <meta property="og:site_name" content="Te Extraño...">
     <meta property="og:locale" content="es_MX">
 </head>
