--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta property="og:description" content="Carta de disculpa.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="uknownbyanxer.github.io/-">
-    <meta property="og:image" content="./heart.jpg">
+    <meta property="og:image" content="https://uknownbyanxer.github.io/-/heart.jpg">
     <meta property="og:site_name" content="Te Extraño...">
     <meta property="og:locale" content="es_MX">
 </head>
